--- a/public/locales/en-US/home.json
+++ b/public/locales/en-US/home.json
@@ -160,7 +160,9 @@
         "pattern": "Please enter the correct email."
       }
     },
-    "message": {},
+    "message": {
+
+    },
     "submit": "Submit"
   },
   "bookFrom": {
@@ -177,7 +179,9 @@
         "pattern": ""
       }
     },
-    "message": {},
+    "message": {
+
+    },
     "submit": "Submit"
   },
   "open-source": "Open Source",
