--- a/public/locales/cs-CZ/landingPageIndex.json
+++ b/public/locales/cs-CZ/landingPageIndex.json
@@ -7,9 +7,9 @@
     "headerContent": {
       "title": "Knihovna vestavěných komponentů",
       "description": "ILLA poskytuje řadu běžně používaných složek pro vývoj na předním konci umožňuje uživatelům snadno vytvářet rozhraní na frontě a reagovat na akce uživatelů a zobrazovat data prostřednictvím jednoduchých operací přetažení. Uživatelé mohou sestavovat komplexní komponenty jako tabulky, grafy, formuláře, seznamy a další prostřednictvím ILLA.",
-      "btn-text": "Vyzkoušejte zdarma",
+      "btn_text": "Vyzkoušejte zdarma",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +91,8 @@
     "headerContent": {
       "title": "Připojit k libovolnému zdroji dat",
       "description": "S možností připojení k hlavním databázím nebo k jakýmkoli datům připojeným prostřednictvím API, ILLA Cloud umožňuje vývojářům úzce integrovat data získaná z back-end se složkami předního konce. To umožňuje vývojářům snadno psát datové hovory a dosáhnout rozsáhlé informační interakce přidáním zdrojů a akcí pro reakci na události uživatelů.",
-      "btn-text": "Vyzkoušejte zdarma",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
+      "btn_text": "Vyzkoušejte zdarma",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
