--- a/public/locales/de-DE/landingPageIndex.json
+++ b/public/locales/de-DE/landingPageIndex.json
@@ -7,9 +7,9 @@
     "headerContent": {
       "title": "Bibliothek der integrierten Komponenten",
       "description": "ILLA bietet eine Reihe von gängigen Frontend-Entwicklungskomponenten, Mit Hilfe von einfachen Drag & Drop Operationen können Benutzeroberflächen einfach erstellt und auf Benutzeraktionen reagiert und Daten angezeigt werden. Benutzer können komplexe Komponenten wie Tabellen, Diagramme, Formulare, Listen und vieles mehr durch ILLA erstellen.",
-      "btn-text": "Kostenlos testen",
+      "btn_text": "Kostenlos testen",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +91,8 @@
     "headerContent": {
       "title": "Mit einer Datenquelle verbinden",
       "description": "Mit der Möglichkeit, sich mit Mainstream-Datenbanken oder über APIs verbundenen Daten zu verbinden, ILLA Cloud ermöglicht Entwicklern die enge Integration von Daten aus dem Backend mit Frontend-Komponenten. Dies ermöglicht Entwicklern das einfache Schreiben von Datenaufrufen und eine umfassende Informations-Interaktion durch das Hinzufügen von Ressourcen und Aktionen zur Reaktion auf Benutzerereignisse.",
-      "btn-text": "Kostenlos testen",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
+      "btn_text": "Kostenlos testen",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
