--- a/public/locales/en-US/landingPageIndex.json
+++ b/public/locales/en-US/landingPageIndex.json
@@ -1,4 +1,7 @@
 {
+  "learn_more": "Learn more",
+  "try_now": "Try now",
+  "live_demo": "Live demo",
   "components": {
     "meta": {
       "title": "ILLA Cloud Components",
@@ -7,9 +10,9 @@
     "headerContent": {
       "title": "Library of built-in components",
       "description": "ILLA provides a range of commonly used front-end development components, enabling users to easily build front-end interfaces and respond to user actions and display data through simple drag-and-drop operations. Users can construct complex components such as tables, charts, forms, lists, and more through ILLA.",
-      "btn-text": "Try for Free",
+      "btn_text": "Try for Free",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +94,8 @@
     "headerContent": {
       "title": "Connect to any data source",
       "description": "With the ability to connect to mainstream databases or any data connected through APIs, ILLA Cloud allows developers to tightly integrate data obtained from the back-end with front-end components. This enables developers to easily write data calls and achieve extensive information interaction by adding resources and actions to response to user events.",
-      "btn-text": "Try for Free",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
+      "btn_text": "Try for Free",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
