--- a/public/locales/es-ES/landingPageIndex.json
+++ b/public/locales/es-ES/landingPageIndex.json
@@ -7,9 +7,9 @@
     "headerContent": {
       "title": "Biblioteca de componentes integrados",
       "description": "ILLA proporciona un rango de componentes de desarrollo de front-end comúnmente utilizados, permitiendo a los usuarios construir fácilmente interfaces front-end y responder a las acciones del usuario y mostrar datos a través de operaciones simples de arrastre y soltar. Los usuarios pueden construir componentes complejos como tablas, gráficos, formularios, listas y más a través de ILLA.",
-      "btn-text": "Prueba gratis",
+      "btn_text": "Prueba gratis",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +91,8 @@
     "headerContent": {
       "title": "Conectar a cualquier fuente de datos",
       "description": "Con la capacidad de conectarse a bases de datos de la llamada o a cualquier dato conectado a través de APIs, ILLA Cloud permite a los desarrolladores integrar estrechamente los datos obtenidos del back-end con los componentes del front-end. Esto permite a los desarrolladores escribir fácilmente llamadas de datos y lograr una amplia interacción de información mediante la adición de recursos y acciones para responder a eventos del usuario.",
-      "btn-text": "Prueba gratis",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/datTodayource.svg"
+      "btn_text": "Prueba gratis",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/datTodayource.svg"
     },
     "classify": {
       "database": {
