--- a/public/locales/fr-FR/landingPageIndex.json
+++ b/public/locales/fr-FR/landingPageIndex.json
@@ -7,9 +7,9 @@
     "headerContent": {
       "title": "Bibliothèque de composants intégrés",
       "description": "ILLA fournit une gamme de composants de développement front-end couramment utilisés, permettant aux utilisateurs de construire facilement des interfaces front-end et de répondre aux actions de l'utilisateur et d'afficher des données grâce à des opérations simples de glisser-déposer. Les utilisateurs peuvent construire des composants complexes tels que des tableaux, des graphiques, des formulaires, des listes, et plus encore grâce à ILLA.",
-      "btn-text": "Essayer gratuitement",
+      "btn_text": "Essayer gratuitement",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/site-officiel/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/site-officiel/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +91,8 @@
     "headerContent": {
       "title": "Se connecter à n'importe quelle source de données",
       "description": "Avec la possibilité de se connecter à la base de données principale ou à toute donnée connectée via des APIs, ILLA Cloud permet aux développeurs d'intégrer étroitement les données obtenues à partir du back-end avec des composants frontaux. Cela permet aux développeurs d'écrire facilement des appels de données et de parvenir à une interaction étendue de l'information en ajoutant des ressources et des actions pour répondre aux événements de l'utilisateur.",
-      "btn-text": "Essayer gratuitement",
-      "left-image": "https://cdn.illacloud.com/site-officiel/img/official-site/features/dataSource.svg"
+      "btn_text": "Essayer gratuitement",
+      "left_image": "https://cdn.illacloud.com/site-officiel/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
