--- a/public/locales/ro-RO/landingPageIndex.json
+++ b/public/locales/ro-RO/landingPageIndex.json
@@ -7,9 +7,9 @@
     "headerContent": {
       "title": "Biblioteca de componente încorporate",
       "description": "ILLA oferă o gamă de componente de dezvoltare front-end utilizate în mod obișnuit, permite utilizatorilor să construiască cu ușurință interfețe front-end și să răspundă la acțiunile utilizatorului și să afișeze date prin operațiuni simple drag-and-drop Utilizatorii pot construi componente complexe cum ar fi tabele, grafice, formulare, liste și multe altele prin ILLA.",
-      "btn-text": "Încearcă gratuit",
+      "btn_text": "Încearcă gratuit",
       "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
@@ -91,8 +91,8 @@
     "headerContent": {
       "title": "Conectează-te la orice sursă de date",
       "description": "Cu posibilitatea de a se conecta la bazele de date standard sau orice date conectate prin API-uri, ILLA Cloud permite dezvoltatorilor să integreze strâns datele obținute din back-end cu componentele front-end. Acest lucru permite dezvoltatorilor să scrie cu ușurință apelurile de date și să realizeze o interacțiune extinsă cu informația prin adăugarea de resurse și acțiuni pentru a răspunde la evenimentele utilizatorului.",
-      "btn-text": "Încearcă gratuit",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
+      "btn_text": "Încearcă gratuit",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
