--- a/public/locales/zh-CN/landingPageIndex.json
+++ b/public/locales/zh-CN/landingPageIndex.json
@@ -1,48 +1,50 @@
 {
+  "learn_more": "了解更多",
+  "try_now": "立即尝试",
+  "live_demo": "查看示例",
   "components": {
     "meta": {
-      "title": "ILLA 云组件",
-      "description": "国际地方当局协会提供了一系列常用的前端发展组成部分。 使用户能够轻松地构建前端接口，响应用户的动作，并通过简单的拖放操作显示数据。 此外，用户可以构建复杂的组成部分，如表格、图表、表格、列表，以及更多地通过平台。 这个简单的方法使用户能够不费力地创建复杂的组件。"
+      "title": "ILLA Cloud 组件",
+      "description": "ILLA 提供了多种常用的前端开发组件，使用者只需通过简单的拖拽操作，即可轻松搭建前端界面，并对用户的操作做出响应并展示数据。此外，使用者还可以通过该平台构建复杂的组件，例如 Table、Chart、Form、List 等等。通过这种简单的方式，用户可以轻松完成复杂组件的构建。"
     },
     "headerContent": {
       "title": "内置组件库",
-      "description": "国际地方当局协会提供了一系列常用的前端发展组成部分。 使用户能够轻松地构建前端接口，响应用户的动作，并通过简单的拖放操作显示数据。 用户可以构建复杂的组成部分，如表格、图表、表格、列表、以及通过国际法律协会构建更多的组成部分。",
-      "btn-text": "免费试用",
-      "isShowBack": false,
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
+      "description": "ILLA提供了一系列常用的前端开发组件，使用户能够通过简单的拖放操作轻松构建前端界面并响应用户操作和显示数据。 用户可以通过 ILLA 构建表格、图表、表单、列表等复杂组件。",
+      "btn_text": "免费体验",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/componentIndex.svg"
     },
     "classify": {
       "inputs": {
-        "title": "Inputs",
+        "title": "输入",
         "contentList": [
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-upload.svg",
-            "name": "上传",
-            "description": "ILLA 云中的“上传”组件为用户上传任何类型的文件到他们的应用程序提供了一种方式。",
+            "name": "Upload",
+            "description": "ILLA Cloud 中的“上传”组件为用户提供了一种将任何类型的文件上传到他们的应用程序的方法。",
             "sort": "4"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-switch.svg",
-            "name": "交换机 ",
-            "description": "ILLA 云端的“开关”组件提供了一个开关开关，允许用户打开或关闭某个特定设置或功能。",
+            "name": "Switch ",
+            "description": "ILLA Cloud 中的“开关”组件提供了一个切换开关，允许用户打开或关闭特定设置或功能。",
             "sort": "5"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-select.svg",
-            "name": "选择",
-            "description": "ILLA 云中的“选择”组件是一个下拉选择器，允许用户从选项列表中选择。 提供方便用户和高空间效率的数据输入方法。",
+            "name": "Select",
+            "description": "ILLA Cloud 中的“选择”组件是一个下拉选择器，允许用户从选项列表中进行选择，提供一种用户友好且节省空间的方式来输入数据。",
             "sort": "6"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-radio%20group.svg",
-            "name": "无线电组",
-            "description": "ILLA 云中的“无线电组”组件是一个无线电选择器，允许用户从选择列表中选择一个选项， 为输入和管理数据提供简单明了的方式。",
+            "name": "Radio group",
+            "description": "ILLA Cloud 中的“Radio Group”组件是一个无线电选择器，允许用户从选项列表中选择一个选项，提供一种简单明了的方式来输入和管理数据。",
             "sort": "8"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-checkbox.svg",
-            "name": "复选框组",
-            "description": "ILLA 云中的“复选框组”组件是一个允许用户从列表中选择多个选项的复选框选择器 提供一个简单有效的数据管理方法。",
+            "name": "Checkbox Group",
+            "description": "ILLA Cloud 中的“复选框组”组件是一个复选框选择器，允许用户从列表中选择多个选项，从而提供一种简单高效的数据管理方式。",
             "sort": "9"
           }
         ]
@@ -52,31 +54,31 @@
         "contentList": [
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-chart.svg",
-            "name": "图表",
-            "description": "ILLA 云中的“图表”组件显示基于链接数据的多种类型的图表。 向用户提供清晰、有视觉吸引力的复杂数据陈述。",
-            "sort": 4
+            "name": "Chart",
+            "description": "ILLA Cloud 中的“图表”组件基于连接的数据显示多种类型的图表，为用户提供清晰且视觉上吸引人的复杂数据表示。",
+            "sort": "4"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components-new/type-table.svg",
-            "name": "表",
-            "description": "ILLA 云中的“表格”组件以表格格式显示数据库中的数据。 让用户轻松浏览、排序和分析大量信息。",
-            "sort": 5
+            "name": "Tables",
+            "description": "ILLA Cloud 中的“表格”组件以表格形式显示数据库中的数据，便于用户一目了然地查看、排序和分析大量信息。",
+            "sort": "5"
           }
         ]
       },
       "presentation": {
-        "title": "列报内容",
+        "title": "展示",
         "contentList": [
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components/pdf.svg",
             "name": "PDF",
-            "description": "ILLA 云中的“PDF”组件是一个显示元素，允许用户在应用程序内查看并与 PDF 文件交互。",
+            "description": "ILLA Cloud 中的“PDF”组件是一个显示元素，允许用户在应用程序中查看 PDF 文件并与之交互。",
             "sort": 0
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/components/video.svg",
-            "name": "视频",
-            "description": "ILLA 云中的“视频”组件是一个显示元素，允许用户在应用程序内播放和交互视频。",
+            "name": "Video",
+            "description": "ILLA Cloud 中的“视频”组件是一个显示元素，允许用户在应用程序中播放视频并与之交互。",
             "sort": 1
           }
         ]
@@ -85,130 +87,130 @@
   },
   "integrations": {
     "meta": {
-      "title": "ILLA 云集成",
-      "description": "ILLA 整合了几十个数据来源，并提供了一个非常简单的数据连接方法， 可以连接到数据库或API，如MySQL、PostgreSQL和Hugging Face。"
+      "title": "ILLA Cloud 数据集成",
+      "description": "ILLA集成了数十种数据源，提供了十分简单的数据连接方式，可以连接MySQL、PostgreSQL、Hugging Face等数据库或API"
     },
     "headerContent": {
       "title": "连接到任何数据源",
-      "description": "能够连接到主流数据库或通过API连接的任何数据， ILLA 云端允许开发者将从后端获取的数据与前端组件紧密结合起来。 这使开发人员能够通过添加资源和动作来响应用户事件，轻松地写入数据通话并实现广泛的信息交互。",
-      "btn-text": "免费试用",
-      "left-image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
+      "description": "LLA Cloud 能够连接主流数据库或通过 API 连接的任何数据，允许开发人员将从后端获取的数据与前端组件紧密集成。 这使得开发者可以轻松编写数据调用，通过添加资源和动作来响应用户事件，从而实现广泛的信息交互。",
+      "btn_text": "免费体验",
+      "left_image": "https://cdn.illacloud.com/official-website/img/official-site/features/dataSource.svg"
     },
     "classify": {
       "database": {
-        "title": "数据库集成",
+        "title": "数据库整合",
         "contentList": [
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/mySQL.svg",
             "name": "MySQL",
-            "description": "一个开放源码关系数据库管理系统，能够有效地储存和检索数据。",
+            "description": "一种开源关系数据库管理系统，可实现高效的数据存储和检索。",
             "sort": 0
-          },
-          {
-            "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/postgres.svg",
-            "name": "PostgreSQL",
-            "description": "一个以其稳定性和可靠性著称的高级开源关系数据库管理系统。",
-            "sort": 1
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/MariaDB.svg",
             "name": "MariaDB",
-            "description": "一个社区驱动的 MySQL 的开放源码平台，其功能和性能都得到加强。",
+            "description": "一个社区驱动的 MySQL 开源分支，具有增强的功能和性能改进。",
             "sort": "10"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/TiDB.svg",
             "name": "TiDB",
-            "description": "一个分布式的 SQL 数据库，支持同时使用 SQL 和 NoSQL 工作负载，并具有水平可伸缩性和故障容量。",
+            "description": "一种分布式 SQL 数据库，支持 SQL 和 NoSQL 工作负载，具有水平可伸缩性和容错能力。",
             "sort": "11"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/redis.svg",
-            "name": "雷迪斯",
-            "description": "内存数据结构存储通常用作数据库、缓存和消息经纪。",
+            "name": "Redis",
+            "description": "内存中的数据结构存储，通常用作数据库、缓存和消息代理。",
             "sort": "12"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/MongoDB.svg",
             "name": "MongoDB",
-            "description": "一个 NoSQL 文档数据库，在灵活的 JSON 文档中存储数据。",
+            "description": "一个 NoSQL 文档数据库，将数据存储在灵活的、类似 JSON 的文档中。",
             "sort": "13"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/Elastic%20search.svg",
-            "name": "弹性搜索",
-            "description": "一个能够处理大量数据的分布式RESTFL搜索和分析引擎。",
+            "name": "Elastic Search",
+            "description": "能够处理大量数据的分布式 RESTful 搜索和分析引擎。",
             "sort": "14"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/firebse.svg",
             "name": "Firebase",
-            "description": "一个为移动和网络应用程序提供后端服务的平台，包括实时数据库、身份验证、云信息及其他服务。",
+            "description": "一个为移动和 Web 应用程序提供后端服务的平台，包括实时数据库、身份验证、云消息传递等。",
             "sort": "15"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/supabase.svg",
             "name": "Supabase DB",
-            "description": "提供实时数据库、认证和存储服务的 Firebase的开放源码替代。",
+            "description": "Firebase 的开源替代品，提供实时数据库、身份验证和存储服务。",
             "sort": "16"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/clickhouse%201.svg",
             "name": "Clickhouse",
-            "description": "一个面向开放源码的数据库管理系统，用于网上分析处理。",
+            "description": "一个开源的面向列的数据库管理系统，专为在线分析处理 (OLAP) 工作负载而设计。",
             "sort": "17"
           },
           {
+            "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/Snowflake.svg",
+            "name": "Snowflake",
+            "description": "基于云的数据仓库平台，专为大规模数据存储和分析而设计。",
+            "sort": "21"
+          },
+          {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/dynamoDB.svg",
-            "name": "Amazon 动态DB",
-            "description": "一个完全管理的 NoSQL 数据库服务，提供高性能、可扩展性和可靠性。",
+            "name": "Amazon DynamoDB",
+            "description": "一种完全托管的 NoSQL 数据库服务，可提供高性能、可扩展性和可靠性。",
             "sort": "20"
           },
           {
-            "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/Snowflake.svg",
-            "name": "雪花",
-            "description": "一个基于云层的数据储存平台，用于大规模数据储存和分析。",
-            "sort": "21"
+            "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/postgres.svg",
+            "name": "PostgreSQL",
+            "description": "一个先进的开源关系数据库管理系统，以其稳定性和可靠性着称。",
+            "sort": 1
           }
         ]
       },
       "api": {
-        "title": "API 集成",
+        "title": "API 整合",
         "contentList": [
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/huggingface.svg",
             "name": "Hugging Face Inference API ",
-            "description": "一个 API ，提供易于使用的事先培训的天然语言处理模型，用于推论任务。",
+            "description": "一种 API，可为推理任务提供易于使用的预训练自然语言处理模型。",
             "sort": "0"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/huggingface-1.svg",
-            "name": "隐藏面部输入端点",
-            "description": "一个端点，可以轻松部署和缩放悬浮面型号用于推论任务。",
+            "name": "Hugging Face Inference Endpoint",
+            "description": "允许轻松部署和扩展用于推理任务的拥抱面模型的端点。",
             "sort": "1"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/rest%20api.svg",
             "name": "REST API",
-            "description": "一种基于网络的建筑风格，用于构建网络服务，使用 HTTP 协议在客户端和服务器之间交换数据。",
+            "description": "一种基于 Web 的架构风格，用于构建使用 HTTP 协议在客户端和服务器之间交换数据的 Web 服务。",
             "sort": "2"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/Amazon%20S3.svg",
             "name": "S3",
-            "description": "基于云的对象存储服务，为各种情况提供可缩放、安全和耐久的数据存储服务。",
+            "description": "一种基于云的对象存储服务，可为各种用例提供可扩展、安全且持久的数据存储。",
             "sort": "3"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/SMTP.svg",
             "name": "SMTP",
-            "description": "用于通过互联网发送和接收电子邮件信息的协议。",
+            "description": "用于通过 Internet 发送和接收电子邮件消息的协议。",
             "sort": "4"
           },
           {
             "logo": "https://cdn.illacloud.com/official-website/img/official-site/intergration/GraphQL.svg",
-            "name": "图形QL",
-            "description": "一个 API 的查询语言，为传统的REST API提供了更有效、更强大和更灵活的替代方法。",
+            "name": "GraphQL",
+            "description": "一种 API 查询语言，它提供了比传统 REST API 更高效、更强大、更灵活的替代方案。",
             "sort": "5"
           }
         ]
