Update source file home.json [ci skip]

--- a/public/locales/en-US/home.json
+++ b/public/locales/en-US/home.json
@@ -160,9 +160,7 @@
         "pattern": "Please enter the correct email."
       }
     },
-    "message": {
-
-    },
+    "message": {},
     "submit": "Submit"
   },
   "bookFrom": {
@@ -179,9 +177,7 @@
         "pattern": ""
       }
     },
-    "message": {
-
-    },
+    "message": {},
     "submit": "Submit"
   },
   "open-source": "Open Source",
