Update source file pricing.json [ci skip]

--- a/public/locales/en-US/pricing.json
+++ b/public/locales/en-US/pricing.json
@@ -21,7 +21,7 @@
     "develop-environment": "Develop environment",
     "app-public": "App public",
     "restore-data": "Backup and restore",
-    "deployed": "Access to a deployed engineer",
+    "deployed": "Access to ILLA Support",
     "dedicated": "Dedicated Solutions engineer"
   },
   "tips": {
